--- a/latex/wip/main.tex
+++ b/latex/wip/main.tex
@@ -617,7 +617,7 @@ the proofs in this section.
 When defining assemblies we will be particularly interested in total
 predicates.
 
-\begin{defn}\ref{defn:tripos-total-predicates}
+\begin{defn}\label{defn:tripos-total-predicates}
   A realizability predicate \(\varphi : \RealPred{X}\) is \definiendum{total}
   if it satisfies \(\IForall{x:X}{\IExists{a:\A}{\varphi(x,a)}}\).
 \end{defn}
